--- a/src/css/style.css
+++ b/src/css/style.css
@@ -392,7 +392,7 @@ body {
 }
 
 .form__button {
-  font-family: inherit;
+  font-family: Oswald, sans-serif;
   width: 250px;
   height: 50px;
   margin-top: 65px;
